Fixes search filter inputs covering the heading sometimes.

--- a/tool-ui/src/main/webapp/style/v3/search.less
+++ b/tool-ui/src/main/webapp/style/v3/search.less
@@ -172,10 +172,6 @@
   }
 }
 
-.searchFiltersRest-single {
-  margin-top: -30px;
-}
-
 .searchMissing {
   .icon;
   .icon-level-down;
